<resources>
    <string name="app_name">Thread</string>
    <string name="async">AsyncTask Download</string>
    <string name="thread">HandlerThread Download</string>
    <string name="start_download">Start Download</string>
    <string name="download_progress">Current Download Progress Display</string>
    <string name="stop_download">Stop Download</string>
    <string name="resume_download">Resume Download</string>
    <string name="restart_download">Restart Download</string>
</resources>
