<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:padding="16dp"
            android:text="@string/async"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewAsync"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/download_progress"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size" />

        <ProgressBar
            android:id="@+id/progressBarAsync"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/startAsync"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="@dimen/margin"
            android:background="@color/colorAccent"
            android:text="@string/start_download"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/stopAsync"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="@dimen/margin"
            android:background="@color/colorAccent"
            android:text="@string/stop_download"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/resumeAsync"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="@dimen/margin"
            android:background="@color/colorAccent"
            android:text="@string/resume_download"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/restartAsync"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="@dimen/margin"
            android:background="@color/colorAccent"
            android:text="@string/restart_download"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>